--- a/interviewqnjs.html
+++ b/interviewqnjs.html
@@ -542,7 +542,7 @@ function startTime() {
         <a href="https://www.geeksforgeeks.org/what-is-the-call-stack-in-javascript/">c</a> 
     </PRE>
     <hr><H1>17.What are promises and why do we need them?</H1>
-    <PRE></PRE>
+    <PRE>
     <i>Promises allow errors to be passed down the chain and handled in one common place without having to put in layers of manual error handling.</i>
     A JavaScript Promise object contains both the producing code and calls to the consuming code:
         Promise Object Properties
@@ -578,6 +578,7 @@ function startTime() {
         function(value) {myDisplayer(value);},
         function(error) {myDisplayer(error);}
       );
+        </PRE>
     <hr><H1>18.what is the purpose of async/await keywords?</H1>
     <PRE>
         The async and await keywords in JavaScript are used for working with asynchronous code in a synchronous-like
